--- a/calculator.html
+++ b/calculator.html
@@ -5,30 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="calculator.css">
+    <script src="/home/jenny/repos/Calculator/calculator.js" defer></script>
     <title>Calculator</title>
 </head>
 <body>
     <div id="square">   
         <div id ="display">0</div>
         <div id ="input">
-            <button id="operator">&#9003;</button>
-            <button id="operator">+</button>
-            <button id="operator">-</button>
-            <button id="operator">AC</button>
-            <button>9</button>
-            <button>8</button>
-            <button>7</button>
-            <button id="operator">/</button>
-            <button>6</button>
-            <button>5</button>
-            <button>4</button>
-            <button id="operator">*</button>
-            <button>3</button>
-            <button>2</button>
-            <button>1</button>
-            <button id="equals">=</button>
-            <button id="zero">0</button>
-            <button>.</button>
+            <button class="operator" class="backspace">&#9003;</button>
+            <button class="operator">+</button>
+            <button class="operator">-</button>
+            <button class="operator" class="allClear">AC</button>
+            <button class="number"value="9">9</button>
+            <button class="number"value="8">8</button>
+            <button class="number"value="7">7</button>
+            <button class="operator">/</button>
+            <button class="number"value="6">6</button>
+            <button class="number"value="5">5</button>
+            <button class="number"value="4">4</button>
+            <button class="operator">*</button>
+            <button class="number" value="3">3</button>
+            <button class="number" value="2">2</button>
+            <button class="number" value="1">1</button>
+            <button class="equals">=</button>
+            <button class="zero" value="0">0</button>
+            <button class="number" value=".">.</button>
             
         </div>
 </div>
