Started function for backspace. Second variable (y) is not saving as expected.

--- a/calculator.html
+++ b/calculator.html
@@ -12,7 +12,7 @@
     <div id="square">   
         <div id ="display">0</div>
         <div id ="input">
-            <button class="operator" class="backspace">&#9003;</button>
+            <button class="backspace" onclick="backspace()">&#9003;</button>
             <button class="operator" value="+">+</button>
             <button class="operator" value="-">-</button>
             <button class="allClear" onclick="clearDisplay()">AC</button>
